# hl-forge

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  build.sh  compile.hxml  config.cmake  generate-hl-cpp.sh  haxelib.json  install.sh  rebuild.sh  renderdoc.cap  setup.bat  setup.sh
example/: Base2D.hx  Base3D.hx  Main.hx  SampleApp.hx  Shadows.hx  Skin.hx
example/res/.tmp/: customFont.bfnt
forge/: Forge.hx  GLSLTranscoder.hx  Native.hx
generator/: Generator.hx  forge.idl  mirage.idl
generator/forge/: Generator.hx
generator/mirage/: Generator.hx
h3d/impl/: ForgeDriver.hx
lib/forge/: CompiledProgram.hx  CompiledShader.hx  DebugTrace.hx  DynamicUniformBuffer.hx  EnumTools.hx  FileDependency.hx  Forge.hx  GLSLTranscoder.hx  Heaps.hx  Native.hx  PipelineParamBufferBlock.hx  PipelineTextureSetBlock.hx  RenderTargetBlock.hx  RuntimeRenderTarget.hx  forge.idl
lib/h3d/impl/: ForgeDriver.hx  GraphicsDriver.hx
lib/hxd/impl/: WindowDriver.hx
lib/sdl/: Forge.hx  WindowForge.hx
sdl/: Forge.hx  WindowForge.hx
shadercache_template/MACOS/: generateMipsArray.comp.metal
shadercache_template/VULKAN/: generateMips.comp  generateMipsArray.comp
shaders/: generateMips.comp.fsl  generateMipsArray.comp.fsl
src/: forge.cpp  hl-forge-meta.h  hl-forge-metal.mm  hl-forge-shaders.cpp  hl-forge-shaders.h  hl-forge.cpp  hl-forge.h  hl-forge.mm  hl-forge_osx.hpp  hl-idl-helpers.cpp  hl-idl-helpers.h  hl-idl-helpers.hpp  hl-mirage.cpp  hl-mirage.h  idl_hl.cpp  mirage.cpp
